@@ -1,3 +1,10 @@
+2023-09-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cmds.el (dired-advertise, dired-unadvertise): Declare.
+	(tramp-dired-buffer-p, tramp-remote-process-p): Rename.
+	(tramp-file-name-with-method): New defcustom.
+	(tramp-file-name-with-sudo, tramp-revert-buffer-with-sudo): New defuns.
+
 2023-09-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-perl-file-name-all-completions): Fix Perl
